build some packages without librsvg on mingw32.

--- a/mingw-w64-gegl/PKGBUILD
+++ b/mingw-w64-gegl/PKGBUILD
@@ -4,9 +4,9 @@
 _realname=gegl
 pkgbase="mingw-w64-${_realname}"
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}"
-         "${MINGW_PACKAGE_PREFIX}-${_realname}-docs")
+         $([[ ${CARCH} == i686 ]] || echo "${MINGW_PACKAGE_PREFIX}-${_realname}-docs"))
 pkgver=0.4.54
-pkgrel=1
+pkgrel=2
 pkgdesc="Generic Graphics Library (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -24,7 +24,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-gobject-introspection"
              "${MINGW_PACKAGE_PREFIX}-gi-docgen"
              "${MINGW_PACKAGE_PREFIX}-gettext-tools"
-             $([[ ${CARCH} == aarch64 ]] || echo "${MINGW_PACKAGE_PREFIX}-luajit")
+             "${MINGW_PACKAGE_PREFIX}-luajit"
              "${MINGW_PACKAGE_PREFIX}-vala")
 depends=("${MINGW_PACKAGE_PREFIX}-babl"
          "${MINGW_PACKAGE_PREFIX}-cairo"
@@ -39,7 +39,7 @@ depends=("${MINGW_PACKAGE_PREFIX}-babl"
          "${MINGW_PACKAGE_PREFIX}-libjpeg"
          "${MINGW_PACKAGE_PREFIX}-libpng"
          "${MINGW_PACKAGE_PREFIX}-libraw"
-         "${MINGW_PACKAGE_PREFIX}-librsvg"
+         $([[ ${CARCH} == i686 ]] || echo "${MINGW_PACKAGE_PREFIX}-librsvg")
          "${MINGW_PACKAGE_PREFIX}-libspiro"
          "${MINGW_PACKAGE_PREFIX}-libtiff"
          "${MINGW_PACKAGE_PREFIX}-libwebp"
@@ -64,6 +64,11 @@ prepare() {
 build() {
   mkdir -p build-${MSYSTEM} && cd build-${MSYSTEM}
 
+  declare -a _extra_config
+  if [[ ${CARCH} == i686 ]]; then
+    _extra_config+=("-Dlibrsvg=disabled")
+  fi
+
   MSYS2_ARG_CONV_EXCL="--prefix=" \
   ${MINGW_PREFIX}/bin/meson.exe setup \
     --prefix="${MINGW_PREFIX}" \
@@ -77,7 +82,7 @@ build() {
     -Dsdl1=disabled \
     -Dintrospection=true \
     -Ddocs=false \
-    $([[ ${CARCH} == aarch64 ]] && echo "-Dlua=disabled") \
+    "${_extra_config[@]}" \
     ../${_realname}-${pkgver}
 
   ${MINGW_PREFIX}/bin/meson.exe compile
