Revert "build some packages without librsvg on mingw32."
This reverts commit e621f8af06df4bccec80e4a01ab1efa0d4fbce1a.

gtk and the icon themes no longer have png fallbacks for all svgs,
so this breaks gtk based apps.

--- a/mingw-w64-adwaita-icon-theme/PKGBUILD
+++ b/mingw-w64-adwaita-icon-theme/PKGBUILD
@@ -4,7 +4,7 @@ _realname=adwaita-icon-theme
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
 pkgver=47.0
-pkgrel=2
+pkgrel=1
 pkgdesc="GNOME standard icons (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -19,10 +19,12 @@ makedepends=(
 depends=(
   "${MINGW_PACKAGE_PREFIX}-adwaita-icon-theme-legacy"
   "${MINGW_PACKAGE_PREFIX}-hicolor-icon-theme"
-  $([[ ${CARCH} == i686 ]] || echo "${MINGW_PACKAGE_PREFIX}-librsvg")
+  "${MINGW_PACKAGE_PREFIX}-librsvg"
   "${MINGW_PACKAGE_PREFIX}-gtk-update-icon-cache"
 )
-source=("https://download.gnome.org/sources/${_realname}/${pkgver:0:2}/${_realname}-${pkgver}.tar.xz")
+source=(
+  "https://download.gnome.org/sources/${_realname}/${pkgver:0:2}/${_realname}-${pkgver}.tar.xz"
+)
 noextract=("${_realname}-${pkgver}.tar.xz")
 sha256sums=('ad088a22958cb8469e41d9f1bba0efb27e586a2102213cd89cc26db2e002bdfe')
 
@@ -46,7 +48,7 @@ build() {
 package() {
   "${MINGW_PREFIX}"/bin/meson.exe install -C "build-${MSYSTEM}" --destdir "${pkgdir}"
 
-  install -d "$pkgdir${MINGW_PREFIX}"/share/licenses/${_realname}
-  install -Dm644 "${srcdir}"/${_realname}-${pkgver}/COPYING* \
-    -t "${pkgdir}"${MINGW_PREFIX}/share/licenses/${_realname}
+  install -Dm644 "${srcdir}/${_realname}-${pkgver}"/COPYING "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/COPYING"
+  install -Dm644 "${srcdir}/${_realname}-${pkgver}"/COPYING_LGPL "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/COPYING_LGPL"
+  install -Dm644 "${srcdir}/${_realname}-${pkgver}"/COPYING_CCBYSA3 "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/COPYING_CCBYSA3"
 }
