--- a/mingw-w64-gtk3/PKGBUILD
+++ b/mingw-w64-gtk3/PKGBUILD
@@ -4,7 +4,7 @@ _realname=gtk3
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}" "${MINGW_PACKAGE_PREFIX}-gtk-update-icon-cache")
 pkgver=3.24.48
-pkgrel=2
+pkgrel=1
 pkgdesc="GObject-based multi-platform GUI toolkit (v3) (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -131,7 +131,7 @@ package_gtk3() {
 package_gtk-update-icon-cache() {
   pkgdesc="GTK+ icon cache updater (mingw-w64)"
   depends=("${MINGW_PACKAGE_PREFIX}-gdk-pixbuf2"
-           $([[ ${CARCH} == i686 ]] || echo "${MINGW_PACKAGE_PREFIX}-librsvg")
+           "${MINGW_PACKAGE_PREFIX}-librsvg"
            "${MINGW_PACKAGE_PREFIX}-hicolor-icon-theme")
 
   for hook in gtk-update-icon-cache; do
