--- a/mingw-w64-shards/PKGBUILD
+++ b/mingw-w64-shards/PKGBUILD
@@ -16,11 +16,10 @@ msys2_references=(
   "archlinux: shards"
 )
 license=('spdx:Apache-2.0')
-depends=(
-  "${MINGW_PACKAGE_PREFIX}-crystal"
-)
+depends=()
 makedepends=(
   "git"
+  "${MINGW_PACKAGE_PREFIX}-crystal"
 )
 checkdepends=()
 source=(
