--- a/mingw-w64-fastfetch/PKGBUILD
+++ b/mingw-w64-fastfetch/PKGBUILD
@@ -1,9 +1,9 @@
-# Maintainer: Carter Li <zhangsongcui@live.cn>
+# Maintainer:
 
 _realname=fastfetch
 pkgbase="mingw-w64-${_realname}"
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=2.35.0
+pkgver=2.36.1
 pkgrel=1
 pkgdesc="An actively maintained, feature-rich and performance oriented, neofetch like system information tool (mingw-w64)"
 arch=('any')
@@ -25,7 +25,7 @@ optdepends=("${MINGW_PACKAGE_PREFIX}-vulkan-loader: For Vulkan detection support
             "${MINGW_PACKAGE_PREFIX}-chafa: For chafa image protocol support"
             "${MINGW_PACKAGE_PREFIX}-imagemagick: For sixel image protocol support")
 source=("https://github.com/fastfetch-cli/fastfetch/archive/${pkgver}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('e066d84f9ca176e24f162ce99dab7fac5238b5e8c94ab4aaff5850b6cc5c6ead')
+sha256sums=('490d5b971dd7fac4c31018354904fdd5e2c409924ba868157bda3bfe1fb5c485')
 
 build() {
   declare -a extra_config
