--- a/mingw-w64-crystal/PKGBUILD
+++ b/mingw-w64-crystal/PKGBUILD
@@ -32,19 +32,20 @@ depends=(
 )
 makedepends=(
   "git"
-  $( (( !_bootstrap )) && echo "${MINGW_PACKAGE_PREFIX}-crystal")
+  $( (( _bootstrap )) || echo "${MINGW_PACKAGE_PREFIX}-crystal")
 )
 checkdepends=(
   "${MINGW_PACKAGE_PREFIX}-lld" # needed for linking std_spec
 )
-source=(
-  "$pkgname-$pkgver::git+${msys2_repository_url}.git#tag=${pkgver}"
-  $( (( _bootstrap )) && echo "https://github.com/crystal-lang/crystal/releases/download/1.15.0/crystal-1.15.0-windows-x86_64-gnu-unsupported.zip" ) # stage 0 compiler
-)
-sha256sums=(
-  '626fed60399d7f1dc83e2e5a2ecde20d235e19a3dcf6d70d6f52ec4de063b32b'
-  $( (( _bootstrap )) && echo '7d7df1b4a99cb3f938106ba45e0b55ce1d9913491999f1acaa57da168a18becb' )
-)
+source=("$pkgname-$pkgver::git+${msys2_repository_url}.git#tag=${pkgver}")
+sha256sums=('626fed60399d7f1dc83e2e5a2ecde20d235e19a3dcf6d70d6f52ec4de063b32b')
+
+if (( _bootstrap ))
+then
+  # stage 0 compiler
+  source+=("https://github.com/crystal-lang/crystal/releases/download/1.15.0/crystal-1.15.0-windows-x86_64-gnu-unsupported.zip")
+  sha256sums+=('7d7df1b4a99cb3f938106ba45e0b55ce1d9913491999f1acaa57da168a18becb')
+fi
 
 prepare() {
   cd "$pkgname-$pkgver"
