libimagequant: re-create broken importlib with dlltool
See #23358

--- a/mingw-w64-libimagequant/PKGBUILD
+++ b/mingw-w64-libimagequant/PKGBUILD
@@ -4,7 +4,7 @@ _realname=libimagequant
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
 pkgver=4.3.4
-pkgrel=1
+pkgrel=2
 pkgdesc="Palette quantization library (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -43,6 +43,12 @@ package() {
     --destdir="${pkgdir}" \
     --prefix=${MINGW_PREFIX} \
     --manifest-path imagequant-sys/Cargo.toml
+
+  # https://github.com/msys2/MINGW-packages/issues/23358
+  dlltool \
+    -D"${pkgdir}${MINGW_PREFIX}/bin/imagequant.dll" \
+    -d"${pkgdir}${MINGW_PREFIX}/lib/imagequant.def" \
+    -l"${pkgdir}${MINGW_PREFIX}/lib/libimagequant.dll.a"
 
   # Remove def file
   rm -f "${pkgdir}"${MINGW_PREFIX}/lib/*.def
