Revert "python-pillow: disable libimagequant support for now (broken)"
This reverts commit 77bbfafbd4a7ddde2903f589f968dd1f88ad9cdd.

Worked around via d8fa48e34278c0142f7

--- a/mingw-w64-python-pillow/PKGBUILD
+++ b/mingw-w64-python-pillow/PKGBUILD
@@ -4,7 +4,7 @@ _realname=pillow
 pkgbase=mingw-w64-python-pillow
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-pillow")
 pkgver=11.1.0
-pkgrel=3
+pkgrel=4
 provides=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}=${pkgver}"
           "${MINGW_PACKAGE_PREFIX}-python3-pillow=${pkgver}")
 conflicts=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}"
@@ -22,7 +22,7 @@ url="https://github.com/python-pillow/Pillow/"
 pkgdesc="Python Imaging Library (PIL) fork Python3 version (mingw-w64)"
 depends=("${MINGW_PACKAGE_PREFIX}-freetype"
          "${MINGW_PACKAGE_PREFIX}-lcms2"
-         # $([[ "${CARCH}" == "i686" ]] || echo "${MINGW_PACKAGE_PREFIX}-libimagequant")
+          $([[ "${CARCH}" == "i686" ]] || echo "${MINGW_PACKAGE_PREFIX}-libimagequant")
          "${MINGW_PACKAGE_PREFIX}-libjpeg"
          "${MINGW_PACKAGE_PREFIX}-libraqm"
          "${MINGW_PACKAGE_PREFIX}-libtiff"
@@ -48,9 +48,6 @@ build() {
 
   declare -a _extra_config
   if [ "${CARCH}" == "i686" ]; then
-    _extra_config+=("-Cimagequant=disable")
-  else
-    # https://github.com/msys2/MINGW-packages/issues/23358#issuecomment-2652104747
     _extra_config+=("-Cimagequant=disable")
   fi
 
