libimagequant: use new cargo-c meson-paths option
So we can get rid of patching this in cargo-c.
Results in imagequant.dll -> libimagequant.dll, so rebuild everything

--- a/mingw-w64-libimagequant/PKGBUILD
+++ b/mingw-w64-libimagequant/PKGBUILD
@@ -4,7 +4,7 @@ _realname=libimagequant
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
 pkgver=4.3.4
-pkgrel=2
+pkgrel=3
 pkgdesc="Palette quantization library (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -30,6 +30,7 @@ build() {
   ${MINGW_PREFIX}/bin/cargo cbuild \
     --release \
     --frozen \
+    --meson-paths \
     --manifest-path build-${MSYSTEM}/imagequant-sys/Cargo.toml
 }
 
@@ -40,13 +41,14 @@ package() {
   ${MINGW_PREFIX}/bin/cargo cinstall \
     --frozen \
     --offline \
+    --meson-paths \
     --destdir="${pkgdir}" \
     --prefix=${MINGW_PREFIX} \
     --manifest-path imagequant-sys/Cargo.toml
 
   # https://github.com/msys2/MINGW-packages/issues/23358
   dlltool \
-    -D"${pkgdir}${MINGW_PREFIX}/bin/imagequant.dll" \
+    -D"${pkgdir}${MINGW_PREFIX}/bin/libimagequant.dll" \
     -d"${pkgdir}${MINGW_PREFIX}/lib/imagequant.def" \
     -l"${pkgdir}${MINGW_PREFIX}/lib/libimagequant.dll.a"
 
