rav1e: fix import lib; use meson-paths; rebuilds
* Work around broken import libs from cargo-c
* switch cargo-c to use meson-paths, which adds the "lib" prefix to the DLL
* rebuild everything to get the fixed import lib and due to the dll name change

--- a/mingw-w64-rav1e/PKGBUILD
+++ b/mingw-w64-rav1e/PKGBUILD
@@ -4,7 +4,7 @@ _realname=rav1e
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
 pkgver=0.7.1
-pkgrel=6
+pkgrel=7
 pkgdesc='An AV1 encoder focused on speed and safety (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -41,6 +41,7 @@ build() {
 
   MSYS2_ARG_CONV_EXCL="--prefix=" \
     cargo capi build \
+      --meson-paths \
       --release \
       --frozen \
       --prefix="${MINGW_PREFIX}"
@@ -66,10 +67,17 @@ package() {
 
   MSYS2_ARG_CONV_EXCL="--prefix=" \
     cargo capi install \
+      --meson-paths \
       --release \
       --frozen \
       --prefix="${MINGW_PREFIX}" \
       --destdir="${pkgdir}"
+
+  # https://github.com/lu-zero/cargo-c/issues/443
+  dlltool \
+    -D"librav1e.dll" \
+    -d"${pkgdir}${MINGW_PREFIX}/lib/rav1e.def" \
+    -l"${pkgdir}${MINGW_PREFIX}/lib/librav1e.dll.a"
 
   # Remove def file
   rm -f "${pkgdir}"${MINGW_PREFIX}/lib/*.def
