--- a/mingw-w64-shards/PKGBUILD
+++ b/mingw-w64-shards/PKGBUILD
@@ -16,6 +16,12 @@ msys2_references=(
   "archlinux: shards"
 )
 license=('spdx:Apache-2.0')
+depends=(
+  "${MINGW_PACKAGE_PREFIX}-gc"
+  "${MINGW_PACKAGE_PREFIX}-libiconv"
+  "${MINGW_PACKAGE_PREFIX}-libyaml"
+  "${MINGW_PACKAGE_PREFIX}-pcre2"
+)
 makedepends=(
   "git"
   "${MINGW_PACKAGE_PREFIX}-crystal"
