GNUstep: Update to Feb 2025 release
gnustep-make 2.9.3
gnustep-base 1.31.0
gnustep-gui 0.32.1
gnustep-back 0.32.0

Rebuild gnustep-xctest, libpreferencepanes

--- a/mingw-w64-gnustep-base/PKGBUILD
+++ b/mingw-w64-gnustep-base/PKGBUILD
@@ -3,8 +3,8 @@
 _realname=gnustep-base
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
-pkgver=1.30.0
-pkgrel=12
+pkgver=1.31.0
+pkgrel=1
 pkgdesc="GNUstep Base library (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64')
@@ -27,18 +27,8 @@ depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs"
          "${MINGW_PACKAGE_PREFIX}-libxslt"
          "${MINGW_PACKAGE_PREFIX}-zlib"
 )
-source=("https://github.com/gnustep/libs-base/releases/download/base-${pkgver//./_}/${_realname}-${pkgver}.tar.gz"
-        # Use absolute paths in ./configure
-        # https://github.com/gnustep/libs-base/pull/371, in review
-        "https://github.com/gnustep/libs-base/commit/2039840e0e1f013f2d73deb6e083b88987cfa6af.patch")
-sha256sums=('00b5bc4179045b581f9f9dc3751b800c07a5d204682e3e0eddd8b5e5dee51faa'
-            '7f8d0d061abd24f10073f0a7ff0338b1907281aa2036745d8b2072732edf69dd')
-
-prepare() {
-  cd "${srcdir}/${_realname}-${pkgver}"
-
-  patch -p1 -i "${srcdir}"/2039840e0e1f013f2d73deb6e083b88987cfa6af.patch
-}
+source=("https://github.com/gnustep/libs-base/releases/download/base-${pkgver//./_}/${_realname}-${pkgver}.tar.gz")
+sha256sums=('d493ed2ba2a32f559f94e2ae5e339c440ae77d481dff1eb0d51eeac4d9127e33')
 
 build() {
   rsync --recursive --times --links "${srcdir}/${_realname}-${pkgver}"/* "${srcdir}/build-${MSYSTEM}"
