--- a/mingw-w64-python-pyaml/PKGBUILD
+++ b/mingw-w64-python-pyaml/PKGBUILD
@@ -5,7 +5,7 @@ pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
 pkgver=25.1.0
 pkgrel=1
-pkgdesc="PyYAML-based mdule to produce pretty and readble YAML-serialized data (mingw-w64)"
+pkgdesc="PyYAML-based module to produce pretty and readble YAML-serialized data (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='https://pypi.python.org/pypi/pyaml'
