--- a/mingw-w64-libdovi/PKGBUILD
+++ b/mingw-w64-libdovi/PKGBUILD
@@ -5,7 +5,7 @@ _sourcename=dovi_tool-${_realname}
 pkgbase=mingw-w64-${_realname}
 pkgname=${MINGW_PACKAGE_PREFIX}-${_realname}
 pkgver=3.3.1
-pkgrel=2
+pkgrel=3
 pkgdesc='Library to read and write Dolby Vision metadata (C-API)'
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -31,6 +31,7 @@ build() {
 
   MSYS2_ARG_CONV_EXCL="--prefix=" \
     cargo cbuild \
+      --meson-paths \
       --release \
       --frozen \
       --all-features \
@@ -51,11 +52,18 @@ package() {
 
   MSYS2_ARG_CONV_EXCL="--prefix=" \
     cargo cinstall \
+        --meson-paths \
         --release \
         --frozen \
         --all-features \
         --prefix="${MINGW_PREFIX}" \
         --destdir="${pkgdir}"
+
+  # https://github.com/lu-zero/cargo-c/issues/443
+  dlltool \
+    -D"libdovi.dll" \
+    -d"${pkgdir}${MINGW_PREFIX}/lib/dovi.def" \
+    -l"${pkgdir}${MINGW_PREFIX}/lib/libdovi.dll.a"
 
   install -Dm644 LICENSE "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/LICENSE"
 }
