--- a/mingw-w64-gst-plugins-rs/PKGBUILD
+++ b/mingw-w64-gst-plugins-rs/PKGBUILD
@@ -5,7 +5,7 @@ pkgbase=mingw-w64-${_realname}
 pkgname=${MINGW_PACKAGE_PREFIX}-${_realname}
 pkgver=1.24.12
 _tag=gstreamer-$pkgver
-pkgrel=1
+pkgrel=2
 pkgdesc='GStreamer plugins written in Rust (mingw-w64)'
 arch=(any)
 mingw_arch=('mingw64' 'ucrt64' 'clang64')
@@ -32,6 +32,7 @@ prepare() {
 _cargo_opts=(--workspace
              --offline
              --release
+             --meson-paths
              --library-type=cdylib
              --prefix="${MINGW_PREFIX}"
              --exclude gst-plugin-csound
@@ -51,5 +52,12 @@ check() {
 package() {
   cd $_realname-$_tag
   MSYS2_ARG_CONV_EXCL="--prefix=" cargo cinstall "${_cargo_opts[@]}" --destdir="$pkgdir"
+
+  # https://github.com/lu-zero/cargo-c/issues/443
+  dlltool \
+    -D"libgstrsinter.dll" \
+    -d"${pkgdir}${MINGW_PREFIX}/lib/gstreamer-1.0/gstrsinter.def" \
+    -l"${pkgdir}${MINGW_PREFIX}/lib/gstreamer-1.0/libgstrsinter.dll.a"
+
   install -Dm644 -t "$pkgdir/$MINGW_PREFIX"/share/licenses/$_realname/ LICENSE*
 }
