cargo-c: remove patch to force lib prefix for import libs
Instead users should pass --meson-paths to cargo-c commands to get
the meson compatible naming.

Slightly inconvenient, but less magic, and we behave like upstream again.

--- a/mingw-w64-cargo-c/PKGBUILD
+++ b/mingw-w64-cargo-c/PKGBUILD
@@ -4,7 +4,7 @@ _realname=cargo-c
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
 pkgver=0.10.9
-pkgrel=1
+pkgrel=2
 pkgdesc='A cargo subcommand to build and install C-ABI compatibile dynamic and static libraries (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -22,17 +22,13 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-rust"
              "${MINGW_PACKAGE_PREFIX}-openssl")
 options=('!strip')
 source=("https://github.com/lu-zero/cargo-c/archive/v${pkgver}/${_realname}-${pkgver}.tar.gz"
-        "${_realname}-${pkgver}.Cargo.lock"::"https://github.com/lu-zero/cargo-c/releases/download/v${pkgver}/Cargo.lock"
-        001-add-lib-prefix-on-windows-gnu.patch)
+        "${_realname}-${pkgver}.Cargo.lock"::"https://github.com/lu-zero/cargo-c/releases/download/v${pkgver}/Cargo.lock")
 sha256sums=('4542e39aa67bf8712c60f21701cc8e8b5153d0344afe1b618f121f696b578a7f'
-            '387e25aa120f945c5455557ca7815b8085090b825d2d4fd0b46cc9fdce0c34bc'
-            '9c69d1d3b9884ddc38cabf605ada2f173c65de98b3605f48f9fb24f8545475a5')
+            '387e25aa120f945c5455557ca7815b8085090b825d2d4fd0b46cc9fdce0c34bc')
 
 prepare() {
     cp "${_realname}-${pkgver}.Cargo.lock" "${_realname}-${pkgver}/Cargo.lock"
     cd "${_realname}-${pkgver}"
-
-    patch -p1 -i "${srcdir}"/001-add-lib-prefix-on-windows-gnu.patch
 
     cargo fetch --locked --target "$(rustc -vV | sed -n 's/host: //p')"
 }
