--- a/mingw-w64-crystal/PKGBUILD
+++ b/mingw-w64-crystal/PKGBUILD
@@ -26,12 +26,13 @@ depends=(
   "${MINGW_PACKAGE_PREFIX}-libiconv"
   "${MINGW_PACKAGE_PREFIX}-libxml2"
   "${MINGW_PACKAGE_PREFIX}-libyaml"
-  "${MINGW_PACKAGE_PREFIX}-llvm"
+  "${MINGW_PACKAGE_PREFIX}-llvm-libs"
   "${MINGW_PACKAGE_PREFIX}-openssl"
   "${MINGW_PACKAGE_PREFIX}-zlib"
 )
 makedepends=(
   "git"
+  "${MINGW_PACKAGE_PREFIX}-llvm"
   $( (( _bootstrap )) || echo "${MINGW_PACKAGE_PREFIX}-crystal")
 )
 checkdepends=(
