python: build with full lto
See https://github.com/python/cpython/pull/130049

We also didn't notice

--- a/mingw-w64-python/PKGBUILD
+++ b/mingw-w64-python/PKGBUILD
@@ -23,7 +23,7 @@ else
   pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}${_pybasever}")
 fi
 pkgver=${_pybasever}.9
-pkgrel=2
+pkgrel=3
 pkgdesc="A high-level scripting language (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -324,7 +324,7 @@ build() {
     CFLAGS+=" -O3"
     # FIXME: https://github.com/msys2-contrib/cpython-mingw/issues/10
     if [[ $MINGW_PACKAGE_PREFIX == *-clang-* ]]; then
-      _extra_config+=("--with-lto")
+      _extra_config+=("--with-lto=full")
     fi
   else
     CFLAGS+=" -O0 -ggdb"
