discount: add `conflicts` with markdown

--- a/mingw-w64-discount/PKGBUILD
+++ b/mingw-w64-discount/PKGBUILD
@@ -12,6 +12,7 @@ mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://www.pell.portland.or.us/~orc/Code/discount/"
 msys2_repository_url="https://github.com/Orc/discount"
 license=('spdx:BSD-3-Clause')
+conflicts=("${MINGW_PACKAGE_PREFIX}-markdown")
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-autotools")
 source=("https://github.com/Orc/discount/archive/v${_pkgver}/${_realname}-${pkgver}.tar.gz"
