--- a/mingw-w64-python-fixtures/PKGBUILD
+++ b/mingw-w64-python-fixtures/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=fixtures
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=4.2.2
+pkgver=4.2.3
 pkgrel=1
 pkgdesc="Fixtures, reusable state for writing clean tests and more (mingw-w64)"
 arch=('any')
@@ -14,15 +14,14 @@ msys2_references=(
   'pypi: fixtures'
 )
 license=('spdx:Apache-2.0 OR BSD-3-Clause')
-depends=("${MINGW_PACKAGE_PREFIX}-python"
-         "${MINGW_PACKAGE_PREFIX}-python-pbr")
+depends=("${MINGW_PACKAGE_PREFIX}-python")
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-installer"
-             "${MINGW_PACKAGE_PREFIX}-python-setuptools")
-checkdepends=("${MINGW_PACKAGE_PREFIX}-python-subunit"
-              "${MINGW_PACKAGE_PREFIX}-python-testtools")
+             "${MINGW_PACKAGE_PREFIX}-python-hatchling"
+             "${MINGW_PACKAGE_PREFIX}-python-hatch-vcs")
+checkdepends=("${MINGW_PACKAGE_PREFIX}-python-testtools")
 source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('af9368737fad6fd501638ca99c78000c3f3fb03fa40a60f9e9d39aa64f342bc1')
+sha256sums=('3697a1acc7659b58eededef2aadba99a18255c5ddfdeeea591fb7e83f4ebb66e')
 
 build() {
   cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
