qxlsx: build with SOVERSION.

--- a/mingw-w64-qxlsx/PKGBUILD
+++ b/mingw-w64-qxlsx/PKGBUILD
@@ -4,7 +4,7 @@ _realname=qxlsx
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
 pkgver=1.5.0
-pkgrel=1
+pkgrel=2
 pkgdesc="Excel file(*.xlsx) reader/writer library using Qt6. (mingw-w64)"
 arch=('any')
 mingw_arch=('ucrt64' 'clang64' 'clangarm64')
@@ -38,6 +38,7 @@ build() {
       -DCMAKE_INSTALL_PREFIX="${MINGW_PREFIX}" \
       "${extra_config[@]}" \
       -DBUILD_SHARED_LIBS=ON \
+      -DCMAKE_DLL_NAME_WITH_SOVERSION=ON \
       -S "QXlsx-${pkgver}"/QXlsx \
       -B "build-${MSYSTEM}"
 
