--- a/mingw-w64-labplot/PKGBUILD
+++ b/mingw-w64-labplot/PKGBUILD
@@ -4,7 +4,7 @@ _realname=labplot
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
 pkgver=2.11.1
-pkgrel=1
+pkgrel=2
 pkgdesc="FREE, open source and cross-platform Data Visualization and Analysis software accessible to everyone. (mingw-w64)"
 arch=('any')
 mingw_arch=('ucrt64' 'clang64' 'clangarm64')
@@ -69,13 +69,15 @@ source=("https://download.kde.org/stable/labplot/labplot-${pkgver}.tar.xz"
         "002-fix-build-with-kuserfeedback.patch"
         "003-fix-build-with-qxlsx.patch"
         "004-fix-find-poppler-qt6.patch"
-        "005-fix-find-qtadvanceddocking.patch")
+        "005-fix-find-qtadvanceddocking.patch"
+        "006-fix-build-with-ixion-0.20.patch")
 sha256sums=('53aa6ac8df39324d99463e60d88de25346b3928da5bb0f210b0563489046679d'
             '998d361b026aa5db9153c73ca930a1843098d8ba4b7b357b1508a6361bb3aa51'
             '345dbe2802d2acf146ced5030314ad59dcae7c415bafd48698a3503999751974'
             '1525d4be3aa7c9136e4487b51b56bb0cd81cb64e0ebe54942183d3685d1ff664'
             '9d390317042c80740e0fd3b7274eb4ed8e1c50a34eafe51844f8e72351d7f117'
-            'a9ad822875ead147e7e2193393b5fe3100dcd8e50b0e89017eadc2b78c8ba5e3')
+            'a9ad822875ead147e7e2193393b5fe3100dcd8e50b0e89017eadc2b78c8ba5e3'
+            'a82756ed1a76570c9176aef3e3195e83aaef48b1697c942248c5d7f593d1dad7')
 
 apply_patch_with_msg() {
   for _patch in "$@"
@@ -93,7 +95,8 @@ prepare() {
     002-fix-build-with-kuserfeedback.patch \
     003-fix-build-with-qxlsx.patch \
     004-fix-find-poppler-qt6.patch \
-    005-fix-find-qtadvanceddocking.patch
+    005-fix-find-qtadvanceddocking.patch \
+    006-fix-build-with-ixion-0.20.patch
 
   # remove conflict with breeze package
   rm data/color-schemes/BreezeDark.colors
