aom, libgme, srt, libopenmpt: Add CPE annotations

--- a/mingw-w64-aom/PKGBUILD
+++ b/mingw-w64-aom/PKGBUILD
@@ -11,6 +11,9 @@ mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://aomedia.org/"
 msys2_repository_url="https://aomedia.googlesource.com/aom"
 msys2_changelog_url="https://aomedia.googlesource.com/aom/+/refs/heads/main/CHANGELOG"
+msys2_references=(
+  "cpe: cpe:/a:aomedia:aomedia"
+)
 license=('spdx:BSD-2-Clause')
 depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs"
          "${MINGW_PACKAGE_PREFIX}-libwinpthread-git")
