--- a/mingw-w64-srt/PKGBUILD
+++ b/mingw-w64-srt/PKGBUILD
@@ -10,6 +10,9 @@ arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 license=('spdx:MPL-2.0')
 url="https://www.srtalliance.org/"
+msys2_references=(
+  "cpe: cpe:/a:srtalliance:secure_reliable_transport"
+)
 depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs"
          "${MINGW_PACKAGE_PREFIX}-libwinpthread"
          "${MINGW_PACKAGE_PREFIX}-openssl")
