--- a/mingw-w64-zed/PKGBUILD
+++ b/mingw-w64-zed/PKGBUILD
@@ -3,11 +3,12 @@
 _realname=zed
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=0.172.11
+pkgver=0.173.10
 pkgrel=1
 pkgdesc="A high-performance, multiplayer code editor (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw64' 'ucrt64' 'clang64')
+# FIXME: clang doesn't link pthread properly for aws-lc: https://github.com/aws/aws-lc-rs/issues/696#issuecomment-2660839255
+mingw_arch=('mingw64' 'ucrt64') # 'clang64')
 url='https://zed.dev'
 msys2_repository_url='https://github.com/zed-industries/zed'
 msys2_documentation_url='https://zed.dev/docs'
@@ -28,6 +29,8 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-rust"
              #"${MINGW_PACKAGE_PREFIX}-sqlite3"
              "${MINGW_PACKAGE_PREFIX}-cargo-about"
              "${MINGW_PACKAGE_PREFIX}-lld"
+             "${MINGW_PACKAGE_PREFIX}-rust-bindgen"
+             "${MINGW_PACKAGE_PREFIX}-nasm"
              'git')
 optdepends=("${MINGW_PACKAGE_PREFIX}-ollama: provides LLMs for assistance panel"
             "${MINGW_PACKAGE_PREFIX}-clang-tools-extra: for a better C/C++ language support"
@@ -38,10 +41,12 @@ if [[ ${MSYSTEM} != CLANG* ]]; then
   optdepends+=("${MINGW_PACKAGE_PREFIX}-mesonlsp: for 'Meson' extension")
 fi
 source=("git+${msys2_repository_url}.git#tag=v${pkgver}"
+        "git+https://github.com/aws/aws-lc-rs.git#tag=aws-lc-sys/v0.25.0"
         "zstd-sys.tar.gz::https://crates.io/api/v1/crates/zstd-sys/2.0.13+zstd.1.5.6/download"
         "zed-dont-vendor-cargo-about.patch"
         "zstd-sys-remove-statik.patch")
-sha256sums=('9ce17a8f338c5ad54a054700ed329b4d3ffec12651feb34498cb57a0880c2a74'
+sha256sums=('60b2aa4287845caffa7bc1cc9fa48843815523866c0bdfccfe2a82fc218d00c8'
+            'f7ef2e96d54e33481b5e4838ee3336a9382b8b7a24767ca47fd39069aa466723'
             '38ff0f21cfee8f97d94cef41359e0c89aa6113028ab0291aa8ca0038995a95aa'
             'b126b7a9e3cc8d3d68c49dbfc184d54691b10172dbfd3272d4c2f43424cfca5b'
             '48f4900ceb02d3aaf9a1020f33d56629156e96759f456c0e7ca18bfcf910767b')
@@ -56,7 +61,7 @@ prepare() {
   # link system deps dynamically
   patch -d "../zstd-sys-2.0.13+zstd.1.5.6" -i "../zstd-sys-remove-statik.patch"
   # use patched *-sys crates
-  sed -i '/\[patch\.crates-io\]/a zstd-sys = { path = "../zstd-sys-2.0.13+zstd.1.5.6" }' Cargo.toml
+  sed -i '/\[patch\.crates-io\]/a zstd-sys = { path = "../zstd-sys-2.0.13+zstd.1.5.6" }\naws-lc-sys = { path = "../aws-lc-rs/aws-lc-sys" }' Cargo.toml
 
   # change git config so `pet*` crates would be fetched without error. requires Windows registry
   # changes, see
@@ -66,7 +71,10 @@ prepare() {
     git config --global core.longpaths true
   fi
 
-  cargo update -p zstd-sys
+  # fetch submodules for aws-lc-rs locally
+  git -C ../aws-lc-rs submodule update --init --recursive
+
+  cargo update -p aws-lc-sys -p zstd-sys
   cargo fetch --locked --target "$(rustc -vV | sed -n 's/host: //p')"
   # generate license for whole Zed contents
   sh script/generate-licenses
@@ -91,6 +99,9 @@ build() {
   # https://github.com/msys2/MINGW-packages/issues/22071
   export RUSTFLAGS="$RUSTFLAGS -C link-arg=-fuse-ld=lld -C symbol-mangling-version=v0
     --cfg tokio_unstable --cfg windows_slim_errors"
+
+  # set path to aws-lc include explicitly: https://github.com/aws/aws-lc-rs/issues/696
+  export CFLAGS="$CFLAGS -I$(cygpath -am ${srcdir}/aws-lc-rs/aws-lc-sys/aws-lc/include)"
 
   cargo build --release --frozen -p zed
 }
