GNUstep: Set msys2_repository_url

--- a/mingw-w64-gnustep-base/PKGBUILD
+++ b/mingw-w64-gnustep-base/PKGBUILD
@@ -9,6 +9,7 @@ pkgdesc="GNUstep Base library (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64')
 url='https://gnustep.github.org/'
+msys2_repository_url='https://github.com/gnustep/libs-base'
 msys2_references=(
   "cpe: cpe:/a:gnustep:base"
 )
@@ -30,7 +31,7 @@ depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs"
          "${MINGW_PACKAGE_PREFIX}-libxslt"
          "${MINGW_PACKAGE_PREFIX}-zlib"
 )
-source=("https://github.com/gnustep/libs-base/releases/download/base-${pkgver//./_}/${_realname}-${pkgver}.tar.gz")
+source=("${msys2_repository_url}/releases/download/base-${pkgver//./_}/${_realname}-${pkgver}.tar.gz")
 sha256sums=('d493ed2ba2a32f559f94e2ae5e339c440ae77d481dff1eb0d51eeac4d9127e33')
 
 build() {
