--- a/mingw-w64-gnustep-make/PKGBUILD
+++ b/mingw-w64-gnustep-make/PKGBUILD
@@ -9,12 +9,13 @@ pkgdesc="GNUstep build system (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64')
 url='https://gnustep.github.org/'
+msys2_repository_url='https://github.com/gnustep/tools-make'
 license=('spdx:GPL-3.0-or-later')
 makedepends=("${MINGW_PACKAGE_PREFIX}-autotools"
              "${MINGW_PACKAGE_PREFIX}-clang"
              "${MINGW_PACKAGE_PREFIX}-lld"
              "${MINGW_PACKAGE_PREFIX}-libobjc2")
-source=("https://github.com/gnustep/tools-make/releases/download/make-${pkgver//./_}/${_realname}-${pkgver}.tar.gz")
+source=("${msys2_repository_url}/releases/download/make-${pkgver//./_}/${_realname}-${pkgver}.tar.gz")
 sha256sums=('93ca320b706279ebca53760da89d4c3f2bbc547f4723967140a34346d9f04c24')
 
 build() {
