--- a/mingw-w64-gnustep-xctest/PKGBUILD
+++ b/mingw-w64-gnustep-xctest/PKGBUILD
@@ -9,6 +9,7 @@ pkgdesc="Testing framework for Objective-C, providing functionalities identical 
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64')
 url='https://gnustep.github.io/'
+msys2_repository_url='https://github.com/gnustep/tools-xctest'
 license=('spdx:LGPL-2.1-or-later')
 makedepends=("${MINGW_PACKAGE_PREFIX}-autotools"
              "${MINGW_PACKAGE_PREFIX}-clang"
@@ -16,7 +17,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-autotools"
              "${MINGW_PACKAGE_PREFIX}-gnustep-make"
              rsync)
 depends=("${MINGW_PACKAGE_PREFIX}-gnustep-base")
-source=("https://github.com/gnustep/tools-xctest/archive/refs/tags/v${pkgver}.tar.gz")
+source=("${msys2_repository_url}/archive/refs/tags/v${pkgver}.tar.gz")
 sha256sums=('d72d9a32cb271746f0058379ff81e593dd7e6fb3d1686d7dabe8ec986b3571ae')
 
 prepare() {
