--- a/mingw-w64-libpreferencepanes/PKGBUILD
+++ b/mingw-w64-libpreferencepanes/PKGBUILD
@@ -10,6 +10,7 @@ pkgdesc="GNUstep preferences library - runtime library (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64')
 url='https://gnustep.github.org/'
+msys2_repository_url="https://github.com/gnustep/${_realname}"
 license=('spdx:LGPL-2.1-or-later')
 makedepends=("${MINGW_PACKAGE_PREFIX}-autotools"
              "${MINGW_PACKAGE_PREFIX}-clang"
@@ -17,7 +18,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-autotools"
              "${MINGW_PACKAGE_PREFIX}-gnustep-make"
              rsync)
 depends=("${MINGW_PACKAGE_PREFIX}-gnustep-gui")
-source=("https://github.com/gnustep/${_realname}/archive/refs/tags/systempreferences-${pkgver//./_}.tar.gz")
+source=("${msys2_repository_url}/archive/refs/tags/systempreferences-${pkgver//./_}.tar.gz")
 sha256sums=('40125db52808abef4a08433c43ab856dcad3c24f909531655fc794145fd2c8ab')
 
 build() {
