--- a/mingw-w64-gnustep-back/PKGBUILD
+++ b/mingw-w64-gnustep-back/PKGBUILD
@@ -9,6 +9,7 @@ pkgdesc="GNUstep GUI Backend (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64')
 url='https://gnustep.github.org/'
+msys2_repository_url='https://github.com/gnustep/libs-back'
 license=('spdx:LGPL-2.1-or-later')
 makedepends=("${MINGW_PACKAGE_PREFIX}-autotools"
              "${MINGW_PACKAGE_PREFIX}-clang"
@@ -17,7 +18,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-autotools"
              rsync)
 depends=("${MINGW_PACKAGE_PREFIX}-gnustep-gui"
          "${MINGW_PACKAGE_PREFIX}-cairo")
-source=("https://github.com/gnustep/libs-back/releases/download/back-${pkgver//./_}/${_realname}-${pkgver}.tar.gz")
+source=("${msys2_repository_url}/releases/download/back-${pkgver//./_}/${_realname}-${pkgver}.tar.gz")
 sha256sums=('ce171095012ac5d845f6e1285a5c71e011fd00aa5981ea1d5a5183706478218d')
 
 build() {
