zed: restore clang64

--- a/mingw-w64-zed/PKGBUILD
+++ b/mingw-w64-zed/PKGBUILD
@@ -7,8 +7,7 @@ pkgver=0.173.10
 pkgrel=1
 pkgdesc="A high-performance, multiplayer code editor (mingw-w64)"
 arch=('any')
-# FIXME: clang doesn't link pthread properly for aws-lc: https://github.com/aws/aws-lc-rs/issues/696#issuecomment-2660839255
-mingw_arch=('mingw64' 'ucrt64') # 'clang64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64')
 url='https://zed.dev'
 msys2_repository_url='https://github.com/zed-industries/zed'
 msys2_documentation_url='https://zed.dev/docs'
@@ -43,16 +42,21 @@ fi
 source=("git+${msys2_repository_url}.git#tag=v${pkgver}"
         "git+https://github.com/aws/aws-lc-rs.git#tag=aws-lc-sys/v0.25.0"
         "zstd-sys.tar.gz::https://crates.io/api/v1/crates/zstd-sys/2.0.13+zstd.1.5.6/download"
+        "aws-lc-clang-build.patch"
         "zed-dont-vendor-cargo-about.patch"
         "zstd-sys-remove-statik.patch")
 sha256sums=('60b2aa4287845caffa7bc1cc9fa48843815523866c0bdfccfe2a82fc218d00c8'
             'f7ef2e96d54e33481b5e4838ee3336a9382b8b7a24767ca47fd39069aa466723'
             '38ff0f21cfee8f97d94cef41359e0c89aa6113028ab0291aa8ca0038995a95aa'
+            '2e3d7ef6fdb3ef8a2ec11207e8120ea34553888116ea8a032cb425a8a6261c39'
             'b126b7a9e3cc8d3d68c49dbfc184d54691b10172dbfd3272d4c2f43424cfca5b'
             '48f4900ceb02d3aaf9a1020f33d56629156e96759f456c0e7ca18bfcf910767b')
 
 prepare() {
   cd "${_realname}"
+
+  # fetch submodules for aws-lc-rs locally
+  git -C ../aws-lc-rs submodule update --init --recursive
 
   rm rust-toolchain.toml
 
@@ -60,6 +64,10 @@ prepare() {
   patch -Np1 -i "../zed-dont-vendor-cargo-about.patch"
   # link system deps dynamically
   patch -d "../zstd-sys-2.0.13+zstd.1.5.6" -i "../zstd-sys-remove-statik.patch"
+  # do not use pthread for clang
+  if [[ ${CC} == clang ]]; then
+    patch -d "../aws-lc-rs/aws-lc-sys/aws-lc" -p1 -i "../../../aws-lc-clang-build.patch"
+  fi
   # use patched *-sys crates
   sed -i '/\[patch\.crates-io\]/a zstd-sys = { path = "../zstd-sys-2.0.13+zstd.1.5.6" }\naws-lc-sys = { path = "../aws-lc-rs/aws-lc-sys" }' Cargo.toml
 
@@ -70,9 +78,6 @@ prepare() {
   if test true != "$(git config core.longpaths)"; then
     git config --global core.longpaths true
   fi
-
-  # fetch submodules for aws-lc-rs locally
-  git -C ../aws-lc-rs submodule update --init --recursive
 
   cargo update -p aws-lc-sys -p zstd-sys
   cargo fetch --locked --target "$(rustc -vV | sed -n 's/host: //p')"
