python-poetry: update to 2.1.0

--- a/mingw-w64-python-poetry/PKGBUILD
+++ b/mingw-w64-python-poetry/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=poetry
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=2.0.1
+pkgver=2.1.0
 pkgrel=1
 pkgdesc="Python dependency management and packaging made easy (mingw-w64)"
 arch=('any')
@@ -25,9 +25,11 @@ depends=(
   "${MINGW_PACKAGE_PREFIX}-python-crashtest"
   "${MINGW_PACKAGE_PREFIX}-python-dulwich"
   "${MINGW_PACKAGE_PREFIX}-python-fastjsonschema"
+  "${MINGW_PACKAGE_PREFIX}-python-findpython"
   "${MINGW_PACKAGE_PREFIX}-python-installer"
   "${MINGW_PACKAGE_PREFIX}-python-keyring"
   "${MINGW_PACKAGE_PREFIX}-python-packaging"
+  "${MINGW_PACKAGE_PREFIX}-python-pbs-installer"
   "${MINGW_PACKAGE_PREFIX}-python-pexpect"
   "${MINGW_PACKAGE_PREFIX}-python-pkginfo"
   "${MINGW_PACKAGE_PREFIX}-python-platformdirs"
@@ -41,7 +43,7 @@ depends=(
 )
 options=('!strip')
 source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('a2987c3162f6ded6db890701a6fc657d2cfcc702e9421ef4c345211c8bffc5d5')
+sha256sums=('fe86f70f06f307db9ceb093b66bb85f1391f078eec1b5eda0f52e78541d17105')
 
 prepare() {
   cd "${_realname}-${pkgver}"
