Populate msys2_repository_url

--- a/mingw-w64-libkqueue/PKGBUILD
+++ b/mingw-w64-libkqueue/PKGBUILD
@@ -9,6 +9,7 @@ pkgdesc="Libkqueue (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='https://github.com/mheily/libkqueue'
+msys2_repository_url=${url}
 license=('spdx: ISC AND BSD-2-Clause')
 depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs")
 makedepends=(
@@ -18,7 +19,7 @@ makedepends=(
   'git'
 )
 source=(
-  "git+https://github.com/mheily/libkqueue.git#tag=v${pkgver}"
+  "git+${msys2_repository_url}.git#tag=v${pkgver}"
   0001-libkqueue-cmake-remove-werror.patch
   0002-libkqueue-cmake-fix-static-library-name.patch
   0003-libkqueue-cmake-fix-install-directory.patch
