--- a/mingw-w64-liblc3/PKGBUILD
+++ b/mingw-w64-liblc3/PKGBUILD
@@ -9,12 +9,13 @@ pkgdesc="Low Complexity Communication Codec library and tools (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='https://github.com/google/liblc3'
+msys2_repository_url=${url}
 license=('spdx:Apache-2.0')
 makedepends=("${MINGW_PACKAGE_PREFIX}-meson"
              "${MINGW_PACKAGE_PREFIX}-ninja"
              "${MINGW_PACKAGE_PREFIX}-pkgconf"
              "${MINGW_PACKAGE_PREFIX}-cc")
-source=("https://github.com/google/liblc3/archive/refs/tags/v${pkgver}.tar.gz")
+source=("${msys2_repository_url}/archive/refs/tags/v${pkgver}.tar.gz")
 sha256sums=('276752ff54ce6a77d54ec133397b9d7e71f90caf3d9afa32d8b0e891b8ecb8af')
 
 build() {
