--- a/mingw-w64-glib2/PKGBUILD
+++ b/mingw-w64-glib2/PKGBUILD
@@ -12,6 +12,7 @@ pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
 pkgver=2.82.4
 pkgrel=1
 url="https://gitlab.gnome.org/GNOME/glib"
+msys2_repository_url=${url}
 msys2_references=(
   "cpe: cpe:/a:gnome:glib"
 )
