--- a/mingw-w64-libdeflate/PKGBUILD
+++ b/mingw-w64-libdeflate/PKGBUILD
@@ -9,6 +9,7 @@ pkgdesc="Heavily optimized library for DEFLATE/zlib/gzip compression and decompr
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='https://github.com/ebiggers/libdeflate'
+msys2_repository_url=${url}
 license=('spdx:MIT')
 makedepends=(
   "${MINGW_PACKAGE_PREFIX}-cc"
