--- a/mingw-w64-libdovi/PKGBUILD
+++ b/mingw-w64-libdovi/PKGBUILD
@@ -10,6 +10,7 @@ pkgdesc='Library to read and write Dolby Vision metadata (C-API)'
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='https://github.com/quietvoid/dovi_tool/tree/main/dolby_vision'
+msys2_repository_url='https://github.com/quietvoid/dovi_tool'
 license=('spdx:MIT')
 msys2_references=(
   'archlinux: libdovi'
@@ -17,7 +18,7 @@ msys2_references=(
 )
 makedepends=("${MINGW_PACKAGE_PREFIX}-rust"
              "${MINGW_PACKAGE_PREFIX}-cargo-c")
-source=("https://github.com/quietvoid/dovi_tool/archive/refs/tags/libdovi-${pkgver}.tar.gz")
+source=("${msys2_repository_url}/archive/refs/tags/libdovi-${pkgver}.tar.gz")
 sha256sums=('4cd7a4c418fd8af1da13278ce7524c15b7fdf61e1fe53663aa291c68c5062777')
 
 prepare() {
