--- a/mingw-w64-python-poetry/PKGBUILD
+++ b/mingw-w64-python-poetry/PKGBUILD
@@ -4,7 +4,7 @@ _realname=poetry
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
 pkgver=2.1.0
-pkgrel=1
+pkgrel=2
 pkgdesc="Python dependency management and packaging made easy (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -18,7 +18,6 @@ license=('spdx:MIT')
 depends=(
   "${MINGW_PACKAGE_PREFIX}-python"
   "${MINGW_PACKAGE_PREFIX}-python-poetry-core"
-  "${MINGW_PACKAGE_PREFIX}-python-poetry-plugin-export"
   "${MINGW_PACKAGE_PREFIX}-python-build"
   "${MINGW_PACKAGE_PREFIX}-python-cachecontrol"
   "${MINGW_PACKAGE_PREFIX}-python-cleo"
@@ -40,6 +39,9 @@ depends=(
   "${MINGW_PACKAGE_PREFIX}-python-tomlkit"
   "${MINGW_PACKAGE_PREFIX}-python-trove-classifiers"
   "${MINGW_PACKAGE_PREFIX}-python-virtualenv"
+)
+optdepends=(
+  "${MINGW_PACKAGE_PREFIX}-python-poetry-plugin-export: provides an export command"
 )
 options=('!strip')
 source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
