poetry: remove unused pexpect dependency; add shell plugin to optdepends

--- a/mingw-w64-python-poetry/PKGBUILD
+++ b/mingw-w64-python-poetry/PKGBUILD
@@ -4,7 +4,7 @@ _realname=poetry
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
 pkgver=2.1.0
-pkgrel=2
+pkgrel=3
 pkgdesc="Python dependency management and packaging made easy (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -29,7 +29,6 @@ depends=(
   "${MINGW_PACKAGE_PREFIX}-python-keyring"
   "${MINGW_PACKAGE_PREFIX}-python-packaging"
   "${MINGW_PACKAGE_PREFIX}-python-pbs-installer"
-  "${MINGW_PACKAGE_PREFIX}-python-pexpect"
   "${MINGW_PACKAGE_PREFIX}-python-pkginfo"
   "${MINGW_PACKAGE_PREFIX}-python-platformdirs"
   "${MINGW_PACKAGE_PREFIX}-python-pyproject-hooks"
@@ -42,6 +41,7 @@ depends=(
 )
 optdepends=(
   "${MINGW_PACKAGE_PREFIX}-python-poetry-plugin-export: provides an export command"
+  "${MINGW_PACKAGE_PREFIX}-python-poetry-plugin-shell: provides the shell command"
 )
 options=('!strip')
 source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
