fortls: Add the python-packaging package as a dependency

--- a/mingw-w64-python-fortls/PKGBUILD
+++ b/mingw-w64-python-fortls/PKGBUILD
@@ -16,7 +16,8 @@ msys2_references=(
 )
 license=('spdx:MIT')
 depends=("${MINGW_PACKAGE_PREFIX}-python"
-         "${MINGW_PACKAGE_PREFIX}-python-json5")
+         "${MINGW_PACKAGE_PREFIX}-python-json5"
+         "${MINGW_PACKAGE_PREFIX}-python-packaging")
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-installer"
              "${MINGW_PACKAGE_PREFIX}-python-wheel"
