--- a/mingw-w64-helix/PKGBUILD
+++ b/mingw-w64-helix/PKGBUILD
@@ -3,8 +3,8 @@
 _realname=helix
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=24.07
-pkgrel=5
+pkgver=25.01.1
+pkgrel=1
 pkgdesc="A post-modern modal text editor (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -19,13 +19,11 @@ optdepends=("${MINGW_PACKAGE_PREFIX}-rust-analyzer: Rust LSP"
             "${MINGW_PACKAGE_PREFIX}-lldb: for lldb-dap")
 source=("$url/archive/$pkgver/${_realname}-${pkgver}.tar.gz"
         'icon.patch'
-        'fix-runtime-dir.patch'
-        'disable-vendoring-and-bump-cc.patch')
+        'fix-runtime-dir.patch')
 noextract=("${_realname}-${pkgver}.tar.gz")
-sha256sums=('0f466ed2de039a7eca6faf29fc0db712c92e1a59d0bdc7e8916c717ceee8b3b3'
+sha256sums=('3f2364463e2e58b0e78ea16fd37a23a93ec2b086323b9ca1e6e310d86a9b3663'
             'f45f0656cb1ceb5c90925c80b093335622f9ad3f64d4e2c8a3a0ea0ab43d900e'
-            'f071538f25e12ca0898c61daa3a2fbf9416a5be4f014682942dcf34dfb0f1335'
-            '6a0a2ee91f7a81959a732561ff5899e113e29ca3085121fda1c559d815a4616b')
+            'f071538f25e12ca0898c61daa3a2fbf9416a5be4f014682942dcf34dfb0f1335')
 
 prepare() {
   tar xf "${_realname}-${pkgver}.tar.gz" \
@@ -47,19 +45,8 @@ replace-with = "vendored-sources"
 directory = "vendor"
 END
 
-
-  sed -i -e 's/"cfg(all(target_arch = \\"\([^\\]\+\)\\", target_env = \\"gnu\\", target_abi = \\"llvm\\", not(windows_raw_dylib)))"/"\1-pc-windows-gnullvm"/g' \
-    "vendor/windows-targets-0.48.0/Cargo.toml"
-  sed -i -e 's/\("Cargo.toml":\)"[^"]\+"/\1"'"$(sha256sum "vendor/windows-targets-0.48.0/Cargo.toml" | cut -d' ' -f1)"'"/' \
-    "vendor/windows-targets-0.48.0/.cargo-checksum.json"
-
   patch -Np1 -i ../icon.patch
   patch -Np1 -i ../fix-runtime-dir.patch
-
-  # pull in https://github.com/rust-lang/cc-rs/pull/1176
-  if [[ "${MSYSTEM}" == *"CLANG"* ]]; then
-    patch -Np1 -i ../disable-vendoring-and-bump-cc.patch
-  fi
 }
 
 build() {
