python-trio-websocket: update to 0.12.1

--- a/mingw-w64-python-trio-websocket/PKGBUILD
+++ b/mingw-w64-python-trio-websocket/PKGBUILD
@@ -3,8 +3,8 @@
 _realname=trio-websocket
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=0.11.1
-pkgrel=2
+pkgver=0.12.1
+pkgrel=1
 pkgdesc="WebSocket client and server implementation for Python Trio (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -15,6 +15,7 @@ msys2_references=(
 license=('spdx:MIT')
 depends=(
   "${MINGW_PACKAGE_PREFIX}-python"
+  "${MINGW_PACKAGE_PREFIX}-python-outcome"
   "${MINGW_PACKAGE_PREFIX}-python-trio"
   "${MINGW_PACKAGE_PREFIX}-python-wsproto"
 )
@@ -23,11 +24,11 @@ makedepends=(
   "${MINGW_PACKAGE_PREFIX}-python-installer"
   "${MINGW_PACKAGE_PREFIX}-python-setuptools"
 )
-source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('18c11793647703c158b1f6e62de638acada927344d534e3c7628eedcb746839f')
+source=("https://pypi.org/packages/source/${_realname::1}/${_realname/-/_}/${_realname/-/_}-${pkgver}.tar.gz")
+sha256sums=('d55ccd4d3eae27c494f3fdae14823317839bdcb8214d1173eacc4d42c69fc91b')
 
 build() {
-  cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
+  cp -r "${_realname/-/_}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
   ${MINGW_PREFIX}/bin/python -m build --wheel --skip-dependency-check --no-isolation
 }
 
