python-websockets: update to 15.0

--- a/mingw-w64-python-websockets/PKGBUILD
+++ b/mingw-w64-python-websockets/PKGBUILD
@@ -3,12 +3,13 @@
 _realname=websockets
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=14.2
+pkgver=15.0
 pkgrel=1
 pkgdesc='Library for building WebSocket servers and clients in Python (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
-url='https://github.com/python-websockets/websockets'
+url='https://websockets.readthedocs.io/'
+msys2_repository_url='https://github.com/python-websockets/websockets'
 msys2_references=(
   "cpe: cpe:/a:websockets_project:websockets"
   'purl: pkg:pypi/websockets'
@@ -19,18 +20,11 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-installer"
              "${MINGW_PACKAGE_PREFIX}-python-setuptools"
              "${MINGW_PACKAGE_PREFIX}-cc")
-source=("${url}/archive/${pkgver}/${_realname}-${pkgver}.tar.gz")
-noextract=("${_realname}-${pkgver}.tar.gz")
-sha256sums=('1a66f8b1dfda367398fa4806435d0eca4ef6ae5563d2f192916dfa40a2646696')
-
-prepare() {
-  [[ -d ${_realname}-${pkgver} ]] && rm -rf ${_realname}-${pkgver}
-  tar zxf "${_realname}-$pkgver.tar.gz" || true
-  cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}"
-}
+source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
+sha256sums=('ca36151289a15b39d8d683fd8b7abbe26fc50be311066c5f8dcf3cb8cee107ab')
 
 build() {
-  cd "${srcdir}/python-build-${MSYSTEM}"
+  cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
 
   BUILD_EXTENSION=yes \
     "${MINGW_PREFIX}"/bin/python -m build --wheel --skip-dependency-check --no-isolation
