Disable strip for mingw-w64-python-hererocks

--- a/mingw-w64-python-hererocks/PKGBUILD
+++ b/mingw-w64-python-hererocks/PKGBUILD
@@ -19,6 +19,7 @@ depends=("git"
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-installer"
              "${MINGW_PACKAGE_PREFIX}-python-setuptools")
+options=('!strip')
 source=(${_realname}-${pkgver}.tar.gz::$url/archive/refs/tags/${pkgver}.tar.gz)
 sha256sums=('bd3769fb9f7ac944f67601575a6c0aad7118e89ebba418985a126c2412f1f9e0')
 
