udpate vma to 3.2.1

--- a/mingw-w64-vulkan-memory-allocator/PKGBUILD
+++ b/mingw-w64-vulkan-memory-allocator/PKGBUILD
@@ -1,9 +1,9 @@
-# Maintainer: Felixaszx (Felix Xing) felixxing3009@outlook.com
+# Maintainer: Felix Xing (Felixaszx) <felixaszx@outlook.com>
 
 _realname=VulkanMemoryAllocator
 pkgbase=mingw-w64-vulkan-memory-allocator
 pkgname=("${MINGW_PACKAGE_PREFIX}-vulkan-memory-allocator")
-pkgver=3.2.0
+pkgver=3.2.1
 pkgrel=1
 pkgdesc="Memory allocation library for Vulkan API (mingw-w64)"
 arch=('any')
