zed: update to 0.173.11

--- a/mingw-w64-zed/PKGBUILD
+++ b/mingw-w64-zed/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=zed
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=0.173.10
+pkgver=0.173.11
 pkgrel=1
 pkgdesc="A high-performance, multiplayer code editor (mingw-w64)"
 arch=('any')
@@ -45,7 +45,7 @@ source=("git+${msys2_repository_url}.git#tag=v${pkgver}"
         "aws-lc-clang-build.patch"
         "zed-dont-vendor-cargo-about.patch"
         "zstd-sys-remove-statik.patch")
-sha256sums=('60b2aa4287845caffa7bc1cc9fa48843815523866c0bdfccfe2a82fc218d00c8'
+sha256sums=('4bc590941df439b6faf58f172e5ce0831efb76a9901dd028872f953b1f42ae86'
             'f7ef2e96d54e33481b5e4838ee3336a9382b8b7a24767ca47fd39069aa466723'
             '38ff0f21cfee8f97d94cef41359e0c89aa6113028ab0291aa8ca0038995a95aa'
             '2e3d7ef6fdb3ef8a2ec11207e8120ea34553888116ea8a032cb425a8a6261c39'
@@ -66,7 +66,7 @@ prepare() {
   patch -d "../zstd-sys-2.0.13+zstd.1.5.6" -i "../zstd-sys-remove-statik.patch"
   # do not use pthread for clang
   if [[ ${CC} == clang ]]; then
-    patch -d "../aws-lc-rs/aws-lc-sys/aws-lc" -p1 -i "../../../aws-lc-clang-build.patch"
+    patch -d "../aws-lc-rs/aws-lc-sys/aws-lc" -p1 -i "${srcdir}/aws-lc-clang-build.patch"
   fi
   # use patched *-sys crates
   sed -i '/\[patch\.crates-io\]/a zstd-sys = { path = "../zstd-sys-2.0.13+zstd.1.5.6" }\naws-lc-sys = { path = "../aws-lc-rs/aws-lc-sys" }' Cargo.toml
