diffutils: Update to 3.11

--- a/mingw-w64-diffutils/PKGBUILD
+++ b/mingw-w64-diffutils/PKGBUILD
@@ -4,7 +4,7 @@
 _realname=diffutils
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
-pkgver=3.10
+pkgver=3.11
 pkgrel=1
 pkgdesc="GNU Diffutils is a package of several programs related to finding differences between files (mingw-w64)"
 arch=('any')
@@ -19,21 +19,14 @@ depends=("${MINGW_PACKAGE_PREFIX}-libsigsegv"
          "${MINGW_PACKAGE_PREFIX}-gettext")
 makedepends=("${MINGW_PACKAGE_PREFIX}-autotools" "${MINGW_PACKAGE_PREFIX}-cc")
 source=("https://ftp.gnu.org/gnu/${_realname}/${_realname}-${pkgver}.tar.xz"
-        "msvc_invalid_parameter_handler.patch"
-        "win_signal_handling.patch"
-        "0001-fix-build.patch"
-        )
-sha256sums=('90e5e93cc724e4ebe12ede80df1634063c7a855692685919bfe60b556c9bd09e'
-            '8842a1acaf127087ae2c52ed1c7da9275c9ba8aae02ce0df7dd59dbac89b16d9'
-            '612bdf2eefc4e50195153790404fff4ebaf7c7aa23fef1bb42a9d79df67aba25'
-            '1278ed9eae53c2c5d8094f46d1342809a39fa1bbcd6ce749d314034637106d4c')
+        "001-msvc_invalid_parameter_handler.patch")
+sha256sums=('a73ef05fe37dd585f7d87068e4a0639760419f810138bd75c61ddaa1f9e2131e'
+            '8842a1acaf127087ae2c52ed1c7da9275c9ba8aae02ce0df7dd59dbac89b16d9')
 
 
 prepare() {
   cd "${srcdir}"/${_realname}-${pkgver}
-  patch -p0 -i "${srcdir}"/msvc_invalid_parameter_handler.patch
-  patch -p1 -i "${srcdir}"/win_signal_handling.patch
-  patch -p2 -i "${srcdir}"/0001-fix-build.patch
+  patch -p0 -i "${srcdir}"/001-msvc_invalid_parameter_handler.patch
 
   #make test cases work
   sed -i "s|case \$perms in drwx--\[-S\]---\*|case \$perms in drwx\*|" tests/init.sh
