zed: update to 0.174.6

--- a/mingw-w64-zed/PKGBUILD
+++ b/mingw-w64-zed/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=zed
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=0.174.4
+pkgver=0.174.6
 pkgrel=1
 pkgdesc="A high-performance, multiplayer code editor (mingw-w64)"
 arch=('any')
@@ -45,7 +45,7 @@ source=("git+${msys2_repository_url}.git#tag=v${pkgver}"
         "aws-lc-clang-build.patch"
         "zed-dont-vendor-cargo-about.patch"
         "zstd-sys-remove-statik.patch")
-sha256sums=('9b925f2351d44857f3845fba5715ffb939c3716972114d620ec85e24e12e0028'
+sha256sums=('d19157e4910c373bb62cb953d63d725449876110b6b9afb7d9139dd96f946996'
             'f7ef2e96d54e33481b5e4838ee3336a9382b8b7a24767ca47fd39069aa466723'
             '38ff0f21cfee8f97d94cef41359e0c89aa6113028ab0291aa8ca0038995a95aa'
             '2e3d7ef6fdb3ef8a2ec11207e8120ea34553888116ea8a032cb425a8a6261c39'
@@ -103,7 +103,7 @@ build() {
   # should be synced with .cargo/config.toml. use lld linker to fix keyboard shortcuts
   # https://github.com/msys2/MINGW-packages/issues/22071
   export RUSTFLAGS="$RUSTFLAGS -C link-arg=-fuse-ld=lld -C symbol-mangling-version=v0
-    --cfg tokio_unstable --cfg windows_slim_errors"
+    -C target-feature=-crt-static --cfg tokio_unstable --cfg windows_slim_errors"
 
   # set path to aws-lc include explicitly: https://github.com/aws/aws-lc-rs/issues/696
   export CFLAGS="$CFLAGS -I$(cygpath -am ${srcdir}/aws-lc-rs/aws-lc-sys/aws-lc/include)"
