--- a/mingw-w64-eza/PKGBUILD
+++ b/mingw-w64-eza/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=eza
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=0.20.21
+pkgver=0.20.22
 pkgrel=1
 pkgdesc="A modern, maintained replacement for ls (mingw-w64)"
 arch=('any')
@@ -23,7 +23,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-rust"
 optdepends=("${MINGW_PACKAGE_PREFIX}-ttf-font-nerd: for file icons")
 options=('!strip')
 source=("${_realname}::git+${msys2_repository_url}.git#tag=v${pkgver}")
-sha256sums=('7d9abc802e30c391707e520220cddc7ee3cc48226301a8024057644ae3246b39')
+sha256sums=('7971b0a57b6e2e366ade2f5b259c190f9e797e9d00668c9a388cb9768ce533f8')
 
 _env() {
   export LIBGIT2_NO_VENDOR=1
@@ -42,6 +42,7 @@ build() {
   cd "${_realname}"
 
   _env
+  export RUSTFLAGS="$RUSTFLAGS -C target-feature=-crt-static"
   cargo build --release --frozen
 }
 
