wasmtime: update to 30.0.0

--- a/mingw-w64-wasmtime/PKGBUILD
+++ b/mingw-w64-wasmtime/PKGBUILD
@@ -5,7 +5,7 @@ pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}"
          "${MINGW_PACKAGE_PREFIX}-lib${_realname}"
          "${MINGW_PACKAGE_PREFIX}-${_realname}-docs")
-pkgver=29.0.1
+pkgver=30.0.0
 pkgrel=1
 pkgdesc="A fast and secure runtime for WebAssembly (mingw-w64)"
 arch=('any')
@@ -27,7 +27,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-rust"
 source=("git+${msys2_repository_url}.git#tag=v${pkgver}"
         "zstd-sys.tar.gz::https://crates.io/api/v1/crates/zstd-sys/2.0.9+zstd.1.5.5/download"
         "zstd-sys-remove-statik.patch")
-sha256sums=('9dad2296d11c78dec48d64c7a99c8c09ea0fbfd98b68eeebda2548ead700a105'
+sha256sums=('e2306b0591c7edc77ee20e87d09737440fa1b6dce7fea68210331503e80b0983'
             '9e16efa8a874a0481a574084d34cc26fdb3b99627480f785888deb6386506656'
             '48f4900ceb02d3aaf9a1020f33d56629156e96759f456c0e7ca18bfcf910767b')
 
@@ -42,7 +42,7 @@ prepare() {
 zstd-sys = { path = "../zstd-sys-2.0.9+zstd.1.5.5" }
 END
 
-  cargo update -p zstd-sys -p cc
+  cargo update -p zstd-sys
   cargo fetch --locked --target "$(rustc -vV | sed -n 's/host: //p')"
 }
 
