blis: disable clangarm64

--- a/mingw-w64-blis/PKGBUILD
+++ b/mingw-w64-blis/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=1.1
 pkgrel=1
 pkgdesc="BLAS-like Library Instantiation Software Framework. (mingw-w64)"
 arch=('any')
-mingw_arch=('ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('ucrt64' 'clang64')
 url='https://github.com/flame/blis'
 license=('spdx:BSD-3-Clause')
 conflicts=("${MINGW_PACKAGE_PREFIX}-cblas")
