--- a/mingw-w64-python-rpds-py/PKGBUILD
+++ b/mingw-w64-python-rpds-py/PKGBUILD
@@ -4,7 +4,7 @@
 _realname=rpds-py
 pkgbase=mingw-w64-python-${_realname}
 pkgname=${MINGW_PACKAGE_PREFIX}-python-${_realname}
-pkgver=0.23.0
+pkgver=0.23.1
 pkgrel=1
 pkgdesc='Python bindings to the Rust rpds crate for persistent data structures (mingw-w64)'
 arch=('any')
@@ -12,6 +12,7 @@ mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='https://github.com/crate-py/rpds'
 msys2_references=(
   'archlinux: python-rpds-py'
+  'pypi: rpds-py'
   'purl: pkg:pypi/rpds-py'
 )
 license=('spdx:MIT')
@@ -22,7 +23,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-rust")
 options=('!strip')
 source=("https://pypi.org/packages/source/${_realname::1}/${_realname/-/_}/${_realname/-/_}-${pkgver}.tar.gz")
-sha256sums=('ffac3b13182dc1bf648cde2982148dc9caf60f3eedec7ae639e05636389ebf5d')
+sha256sums=('7f3240dcfa14d198dba24b8b9cb3b108c06b68d45b7babd9eefc1038fdf7e707')
 
 prepare() {
   cd "${_realname/-/_}-${pkgver}"
