--- a/mingw-w64-cargo-c/PKGBUILD
+++ b/mingw-w64-cargo-c/PKGBUILD
@@ -3,8 +3,8 @@
 _realname=cargo-c
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=0.10.9
-pkgrel=3
+pkgver=0.10.11
+pkgrel=1
 pkgdesc='A cargo subcommand to build and install C-ABI compatibile dynamic and static libraries (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -22,19 +22,13 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-rust"
              "${MINGW_PACKAGE_PREFIX}-openssl")
 options=('!strip')
 source=("https://github.com/lu-zero/cargo-c/archive/v${pkgver}/${_realname}-${pkgver}.tar.gz"
-        "https://patch-diff.githubusercontent.com/raw/lu-zero/cargo-c/pull/444.patch"
         "${_realname}-${pkgver}.Cargo.lock"::"https://github.com/lu-zero/cargo-c/releases/download/v${pkgver}/Cargo.lock")
-sha256sums=('4542e39aa67bf8712c60f21701cc8e8b5153d0344afe1b618f121f696b578a7f'
-            '4c939d795be6f6645c24a4ff198183393915d490756eabdfbfd34c2446a71480'
-            '387e25aa120f945c5455557ca7815b8085090b825d2d4fd0b46cc9fdce0c34bc')
+sha256sums=('8a6d6dc589d6d70bd7eb95971e3c608240e1f9c938dd5b54a049977333b59f05'
+            'c65ee1fcd2fefa0a3c572477243c64326f21ff5c85b960a7975663141121eb91')
 
 prepare() {
     cp "${_realname}-${pkgver}.Cargo.lock" "${_realname}-${pkgver}/Cargo.lock"
     cd "${_realname}-${pkgver}"
-
-    # https://github.com/lu-zero/cargo-c/issues/443
-    patch -Np1 < ../444.patch
-    cargo update -p implib
 
     cargo fetch --locked --target "$(rustc -vV | sed -n 's/host: //p')"
 }
@@ -51,6 +45,7 @@ build() {
     cd "${_realname}-${pkgver}"
 
     _env
+    export RUSTFLAGS="$RUSTFLAGS -C target-feature=-crt-static"
     cargo build --frozen --profile release-strip
 }
 
