Add some more pypi purls

--- a/mingw-w64-mapserver/PKGBUILD
+++ b/mingw-w64-mapserver/PKGBUILD
@@ -15,6 +15,7 @@ msys2_references=(
   'aur: mapserver'
   "cpe: cpe:/a:osgeo:mapserver"
   "cpe: cpe:/a:umn:mapserver"
+  "purl: pkg:pypi/mapscript"
 )
 license=('spdx:MIT')
 depends=("${MINGW_PACKAGE_PREFIX}-zlib"
