--- a/mingw-w64-python-humanfriendly/PKGBUILD
+++ b/mingw-w64-python-humanfriendly/PKGBUILD
@@ -10,6 +10,9 @@ arch=('any')
 mingw_arch=('ucrt64' 'clang64' 'clangarm64')
 url='https://humanfriendly.readthedocs.io/'
 msys2_repository_url="https://github.com/xolox/python-humanfriendly"
+msys2_references=(
+  'purl: pkg:pypi/humanfriendly'
+)
 license=('spdx:MIT')
 depends=("${MINGW_PACKAGE_PREFIX}-python"
          "${MINGW_PACKAGE_PREFIX}-python-pyreadline3")
