--- a/mingw-w64-python-pyarrow/PKGBUILD
+++ b/mingw-w64-python-pyarrow/PKGBUILD
@@ -13,6 +13,7 @@ msys2_repository_url="https://github.com/apache/arrow"
 msys2_references=(
   'archlinux: arrow'
   "cpe: cpe:/a:apache:arrow"
+  'purl: pkg:pypi/pyarrow'
 )
 license=('spdx:Apache-2.0')
 depends=(
