--- a/mingw-w64-onnx/PKGBUILD
+++ b/mingw-w64-onnx/PKGBUILD
@@ -11,6 +11,9 @@ arch=('any')
 mingw_arch=('ucrt64' 'clang64' 'clangarm64')
 url='https://www.onnx.ai'
 msys2_repository_url="https://github.com/onnx/onnx"
+msys2_references=(
+  'purl: pkg:pypi/onnx'
+)
 license=('spdx:Apache-2.0')
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-cmake"
