--- a/mingw-w64-python-coloredlogs/PKGBUILD
+++ b/mingw-w64-python-coloredlogs/PKGBUILD
@@ -10,6 +10,9 @@ arch=('any')
 mingw_arch=('ucrt64' 'clang64' 'clangarm64')
 url='https://coloredlogs.readthedocs.io/'
 msys2_repository_url="https://github.com/xolox/python-coloredlogs"
+msys2_references=(
+  'purl: pkg:pypi/coloredlogs'
+)
 license=('spdx:MIT')
 depends=("${MINGW_PACKAGE_PREFIX}-python"
          "${MINGW_PACKAGE_PREFIX}-python-humanfriendly")
