--- a/mingw-w64-python-geoalchemy2/PKGBUILD
+++ b/mingw-w64-python-geoalchemy2/PKGBUILD
@@ -10,6 +10,9 @@ arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='https://geoalchemy-2.readthedocs.io/'
 msys2_repository_url='https://github.com/geoalchemy/geoalchemy2'
+msys2_references=(
+  'purl: pkg:pypi/geoalchemy2'
+)
 license=('spdx:MIT')
 depends=("${MINGW_PACKAGE_PREFIX}-python"
          "${MINGW_PACKAGE_PREFIX}-python-packaging"
