--- a/mingw-w64-python-zxing-cpp/PKGBUILD
+++ b/mingw-w64-python-zxing-cpp/PKGBUILD
@@ -9,6 +9,9 @@ pkgdesc="Python bindings for the zxing-cpp barcode library (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='https://github.com/zxing-cpp/zxing-cpp'
+msys2_references=(
+  'purl: pkg:pypi/zxing-cpp'
+)
 license=('spdx:Apache-2.0')
 depends=(
   "${MINGW_PACKAGE_PREFIX}-python"
