python-setuptools-scm: update to 8.2.0

--- a/mingw-w64-python-setuptools-scm/PKGBUILD
+++ b/mingw-w64-python-setuptools-scm/PKGBUILD
@@ -3,12 +3,13 @@
 _realname=setuptools-scm
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=8.1.0
+pkgver=8.2.0
 pkgrel=1
 pkgdesc='Handles managing your python package versions in scm metadata (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
-url='https://github.com/pypa/setuptools_scm'
+url='https://setuptools-scm.readthedocs.io/'
+msys2_repository_url='https://github.com/pypa/setuptools-scm'
 msys2_references=(
   'purl: pkg:pypi/setuptools-scm'
 )
@@ -19,16 +20,10 @@ depends=("${MINGW_PACKAGE_PREFIX}-python"
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-installer")
 source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname/-/_}-${pkgver}.tar.gz")
-sha256sums=('42dea1b65771cba93b7a515d65a65d8246e560768a66b9106a592c8e7f26c8a7')
-
-prepare() {
-  cd "${srcdir}"
-  rm -rf python-build-${MSYSTEM} | true
-  cp -r "${_realname/-/_}-${pkgver}" "python-build-${MSYSTEM}"
-}
+sha256sums=('a18396a1bc0219c974d1a74612b11f9dce0d5bd8b1dc55c65f6ac7fd609e8c28')
 
 build() {
-  cd "${srcdir}/python-build-${MSYSTEM}"
+  cp -r "${_realname/-/_}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
   ${MINGW_PREFIX}/bin/python -m build --wheel --skip-dependency-check --no-isolation
 }
 
