--- a/mingw-w64-sqlitestudio/PKGBUILD
+++ b/mingw-w64-sqlitestudio/PKGBUILD
@@ -1,10 +1,9 @@
 
 _realname=sqlitestudio
-_commit=c12b18bdcd0a55322d183ded2b677236b9e02eed
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}"
          "${MINGW_PACKAGE_PREFIX}-${_realname}-plugins")
-pkgver=3.4.15.r1287.gc12b18b
+pkgver=3.4.16
 pkgrel=1
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -17,35 +16,30 @@ msys2_references=(
 license=("spdx:GPL-3.0")
 depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs"
          "${MINGW_PACKAGE_PREFIX}-openssl"
-         "${MINGW_PACKAGE_PREFIX}-qt6-base"
-         "${MINGW_PACKAGE_PREFIX}-qt6-declarative"
-         "${MINGW_PACKAGE_PREFIX}-qt6-imageformats"
-         "${MINGW_PACKAGE_PREFIX}-qt6-svg"
+         "${MINGW_PACKAGE_PREFIX}-qt5-base"
+         "${MINGW_PACKAGE_PREFIX}-qt5-declarative"
+         "${MINGW_PACKAGE_PREFIX}-qt5-imageformats"
+         "${MINGW_PACKAGE_PREFIX}-qt5-svg"
          "${MINGW_PACKAGE_PREFIX}-wineditline"
          "${MINGW_PACKAGE_PREFIX}-zlib")
-makedepends=("git"
-             "${MINGW_PACKAGE_PREFIX}-cc"
+makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-make"
              "${MINGW_PACKAGE_PREFIX}-pkgconf"
              "${MINGW_PACKAGE_PREFIX}-python"
-             "${MINGW_PACKAGE_PREFIX}-qt6-tools"
+             "${MINGW_PACKAGE_PREFIX}-qt5-tools"
              "${MINGW_PACKAGE_PREFIX}-tcl")
-source=("${_realname}"::"git+https://github.com/pawelsalawa/$_realname.git#commit=$_commit"
+source=("${_realname}-${pkgver}.tar.gz"::"https://github.com/pawelsalawa/sqlitestudio/archive/refs/tags/${pkgver}.tar.gz"
         "001-destdir.patch"
         "002-wineditline-link.patch"
+        "003-win32-libs.patch"
         "clang.patch"::"https://github.com/pawelsalawa/sqlitestudio/pull/5236.patch"
         "arm64.patch"::"https://github.com/pawelsalawa/sqlitestudio/pull/5237.patch")
-sha256sums=('d04fd0c484b1d411bf4cae86eaa7e78b2a586a591c75e4f47dd9d9cf39c99e4e'
+sha256sums=('fa8a4525fb4a6c3137136ad811b5656f467018f18805194cb55a14ea5ba1079a'
             '895958f1857fc9f8bfeffa88daa50e599082695d7ece974fb3dc6f1350806341'
             '6154c2f9c491a1823a2bdc79594d118ed767c1fc28946608a3a3a7ad0a31cf91'
+            'db53aa419aac7722e76d813ec142cc0483f8d1a27298c241eb24512eb08b20f3'
             'd1c77713605c8599a2207e04f478e81fe22511751c0a00c5c7a45714455c3d5a'
             '625457ffbb2299f4407c04d37925cfea2a59a55352c8ab485917580086584142')
-
-pkgver() {
-  cd "${srcdir}/${_realname}"
-
-  git describe --tags --long --abbrev=7 | sed 's/\([^-]*-g\)/r\1/;s/-/./g'
-}
 
 apply_patch_with_msg() {
   for _patch in "$@"
@@ -56,11 +50,12 @@ apply_patch_with_msg() {
 }
 
 prepare() {
-  cd ${_realname}
+  cd ${_realname}-${pkgver}
 
   apply_patch_with_msg \
     001-destdir.patch \
     002-wineditline-link.patch \
+    003-win32-libs.patch \
     clang.patch \
     arm64.patch
 }
@@ -77,10 +72,10 @@ build() {
   fi
 
   MSYS2_ARG_CONV_EXCL="QMAKE_CXXFLAGS=" \
-  ${MINGW_PREFIX}/bin/qmake6 \
+  ${MINGW_PREFIX}/bin/qmake \
     QMAKE_CXXFLAGS="-DSYS_PLUGINS_DIR=${MINGW_PREFIX}/lib/sqlitestudio" \
     QMAKE_CXXFLAGS+=`pkgconf --cflags wineditline` \
-    ../${_realname}/SQLiteStudio3
+    "../${_realname}-${pkgver}"/SQLiteStudio3
 
   # MSYS2_ARG_CONV_EXCL again for QMake called during the build
   MSYS2_ARG_CONV_EXCL="QMAKE_CXXFLAGS=" \
@@ -88,9 +83,10 @@ build() {
 
   mkdir plugins
   cd plugins
-  ${MINGW_PREFIX}/bin/qmake6 \
+  ${MINGW_PREFIX}/bin/qmake \
     QMAKE_CXXFLAGS+=`pkgconf --cflags python3` \
-    ../../${_realname}/Plugins
+    PYTHON_VERSION=3.12 \
+    "../../${_realname}-${pkgver}"/Plugins
 
   ${MINGW_PREFIX}/bin/mingw32-make $_build_type -j 1
 }
@@ -100,7 +96,7 @@ package_sqlitestudio() {
 
   install -Dm644 bin/*.dll -t "${pkgdir}${MINGW_PREFIX}"/bin
   install -Dm644 bin/*.exe -t "${pkgdir}${MINGW_PREFIX}"/bin
-  install -Dm644 "${srcdir}/${_realname}/LICENSE" "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/LICENSE"
+  install -Dm644 "${srcdir}/${_realname}-${pkgver}/LICENSE" "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/LICENSE"
 }
 
 package_sqlitestudio-plugins() {
