--- a/mingw-w64-sdl3/PKGBUILD
+++ b/mingw-w64-sdl3/PKGBUILD
@@ -4,7 +4,7 @@ _realname=sdl3
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
 pkgver=3.2.4
-pkgrel=1
+pkgrel=2
 pkgdesc="A library for portable low-level access to a video framebuffer, audio output, mouse, and keyboard (Version 3) (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -41,14 +41,28 @@ build() {
       -GNinja \
       -DCMAKE_INSTALL_PREFIX="${MINGW_PREFIX}" \
       "${_extra_config[@]}" \
+      -DBUILD_SHARED_LIBS=OFF \
       -DSDL_VULKAN=ON \
       -S "${_realname^^}-${pkgver}" \
-      -B "build-${MSYSTEM}"
+      -B "build-${MSYSTEM}-static"
 
-  cmake --build "build-${MSYSTEM}"
+  cmake --build "build-${MSYSTEM}-static"
+
+  MSYS2_ARG_CONV_EXCL="-DCMAKE_INSTALL_PREFIX=" \
+    cmake \
+      -GNinja \
+      -DCMAKE_INSTALL_PREFIX="${MINGW_PREFIX}" \
+      "${_extra_config[@]}" \
+      -DBUILD_SHARED_LIBS=ON \
+      -DSDL_VULKAN=ON \
+      -S "${_realname^^}-${pkgver}" \
+      -B "build-${MSYSTEM}-shared"
+
+  cmake --build "build-${MSYSTEM}-shared"
 }
 
 package() {
-  DESTDIR="${pkgdir}" cmake --install "build-${MSYSTEM}"
-  install -Dm644 "${srcdir}/${_realname^^}-${pkgver}/LICENSE.txt" "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/LICENSE.txt"
+  DESTDIR="${pkgdir}" cmake --install "build-${MSYSTEM}-static"
+
+  DESTDIR="${pkgdir}" cmake --install "build-${MSYSTEM}-shared"
 }
