--- a/mingw-w64-libserdes/PKGBUILD
+++ b/mingw-w64-libserdes/PKGBUILD
@@ -4,16 +4,18 @@ _realname=libserdes
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
 pkgver=8.0.0
-pkgrel=1
+pkgrel=2
 pkgdesc="Avro library with Confluent schema-registry support (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw64' 'ucrt64' 'clang64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://github.com/confluentinc/libserdes"
-license=('Apache')
+license=('spdx:Apache-2.0')
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-librdkafka"
              "${MINGW_PACKAGE_PREFIX}-autotools")
-depends=("${MINGW_PACKAGE_PREFIX}-curl"
+depends=("${MINGW_PACKAGE_PREFIX}-boost"
+         "${MINGW_PACKAGE_PREFIX}-curl"
+         "${MINGW_PACKAGE_PREFIX}-fmt"
          "${MINGW_PACKAGE_PREFIX}-jansson"
          "${MINGW_PACKAGE_PREFIX}-libavro")
 optdepends=("${MINGW_PACKAGE_PREFIX}-librdkafka")
